# airpods

./: CMakeLists.txt  README.md
common/: CMakeLists.txt
common/protocol/: commands.hpp  crypto.cpp  crypto.hpp  packets.hpp  parse.cpp  parse.hpp
common/types/: battery.hpp  device.hpp  ear_detection.hpp  enums.hpp
linux/: CMakeLists.txt  airpods.service.in  bluez.cpp  bluez.hpp  dbus.cpp  dbus.hpp  l2cap.cpp  l2cap.hpp  main.cpp  pipewire.cpp  pipewire.hpp
